# webai-cli

./: .gitignore  README.md  pyproject.toml
webai/: batch.py  cli.py  commands.py  config.py  context.py  patch.py
webai/providers/: __init__.py  base.py  chatgpt.py  claude_ai.py  deepseek.py  gemini.py  grok.py  kimi.py  lumo.py  mistral.py  perplexity.py  zai.py
